Replace java.util.List mutable library by vavr immutable library.