@@ -1,8 +1,7 @@
 package com.nubank;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import io.vavr.collection.List;
+
 import java.util.Objects;
 
 public final class Account {
@@ -14,9 +13,8 @@ public final class Account {
     public Account(boolean activeCard, int availableLimit) {
         this.activeCard = activeCard;
         this.availableLimit = availableLimit;
-        this.violations = new ArrayList<>();
+        this.violations = List.empty();
     }
-
 
     private Account(Account accountInfo, List<String> violations) {
         this.activeCard = accountInfo.activeCard;
@@ -27,7 +25,7 @@ public final class Account {
     private Account(Account accountInfo) {
         this.activeCard = accountInfo.activeCard;
         this.availableLimit = accountInfo.availableLimit;
-        this.violations = new ArrayList<>();
+        this.violations = List.empty();
     }
 
     public Account(boolean activeCard, int availableLimit, List<String> violations) {
@@ -40,34 +38,47 @@ public final class Account {
         return new Account(accountInfo);
     }
 
-    public Account accountWithViolations() {
-        List<String> violations = Arrays.asList("account-already-initialized");
+    public Account accountAlreadyInitialized() {
+        List<String> violations = List.of("account-already-initialized");
         return new Account(this, violations);
     }
 
     public static Account accountNotInitialized() {
-        List<String> violations = Arrays.asList("account-not-initialized");
+        List<String> violations = List.of("account-not-initialized");
         return new Account(false, 0, violations);
     }
 
     public Account accountWithCardNotActive() {
-        List<String> violations = Arrays.asList("card-not-active");
+        List<String> violations = List.of("card-not-active");
         return new Account(this, violations);
     }
 
-    public Account accountWithInsuficientLimits() {
-        List<String> violations = Arrays.asList("insuficient-limit");
-        return new Account(this, violations);
-    }
-
-    public Account accountWithDoubleTransaction() {
-        List<String> violations = Arrays.asList("double-transaction");
+    public Account accountWithInsufficientLimits() {
+        List<String> violations = List.of("insufficient-limit");
         return new Account(this, violations);
     }
 
     public Account accountWithHighFrequencySmallInterval() {
-        List<String> violations = Arrays.asList("high-frequency-small-interval");
+        List<String> violations = List.of("high-frequency-small-interval");
         return new Account(this, violations);
+    }
+
+
+    public Account accountWithDoubleTransaction() {
+        List<String> violations = List.of("double-transaction");
+        return new Account(this, violations);
+    }
+
+    public Account debt(Transaction transactionToBeAproved) {
+        return new Account(activeCard, availableLimit - transactionToBeAproved.getAmount());
+    }
+
+    public boolean isNotActive() {
+        return !activeCard;
+    }
+
+    public boolean isNotThereSufficientLimit(int amount) {
+        return availableLimit < amount;
     }
 
     @Override
@@ -85,18 +96,6 @@ public final class Account {
         return Objects.hash(activeCard, availableLimit, violations);
     }
 
-    public Account debt(Transaction transactionToBeAproved) {
-        return new Account(activeCard, availableLimit - transactionToBeAproved.getAmount());
-    }
-
-    public boolean isNotActive() {
-        return !activeCard;
-    }
-
-    public boolean isNotThereSufficientLimit(int amount) {
-        return availableLimit < amount;
-    }
-
     @Override
     public String toString() {
         return "Account{" +
@@ -104,9 +103,5 @@ public final class Account {
                 ", availableLimit=" + availableLimit +
                 ", violations=" + violations +
                 '}';
-    }
-
-    public boolean hasViolations() {
-        return violations.size() > 0;
     }
 }
